--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
           <ol>
             <li> HTML is not cool </li>
-            <li>CSS is cooler</li>
+            <li>CSS is not cooler</li>
             <li>JS is the biggest</li>
           </ol>
 
